--- a/ITPE3200X/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/ITPE3200X/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -5,7 +5,7 @@
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
     <li class="nav-item">
         <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-            <button type="submit" class="nav-link" style="width: 100%; height: 100%; text-align: start;">
+            <button type="submit" class="nav-link" style="width: 100%; height: 100%; text-align: start; color: #dd2828 !important;">
                 Click here to Logout <i class="bi bi-door-closed"></i>
             </button>
         </form>
